# malak-v8-compiler

./: .gitignore  CMakeLists.txt  main.epc  main.kt  main.xep
include/: v8def.h
include/tools/: strlib.h
include/v8/: ast.h  errcode.h  lex.h  pars.h  parser.h  token.h  tokenkind.h  v8cmp.h
include/vk/: log.h
include/vklib/: log.h  strlib.h  vkfile.h  vkmem.h  vkstring.h
init/: main.cpp
main/: main.c
src/v8/: Lexer.scala  Token.scala  error.scala  lex.scala  package.scala  tok.scala
tool/: log.c  log.h
tools/: strlib.c
v8/: .txt  XEPOCH.V8.KURODA  ast.cpp  ast.h  errcode.h  lex.c  lex.cpp  lex.h  lexp.c  lexp.h  lexpas.c  pars.cpp  parser.cpp  parser.h  srcreader.cpp  srcreader.h  token.cpp  token.h  v8-comp.c  v8_make_cmp.c  v8cmp.c  v8cmp.h
v8-cmp/: lexpas.h  v8cmp.c
vkexmp/: main.vk  vako_keywords
vklib/: strlib.c  vkmem.c  vkmem.h  vkstring.c
vklib/io/: vkfile.c
xepkit/: stdio.kt  stdio.xep
